# enduring-renewal

./: .gitignore  CLAUDE.md  HUMAN.md
combat/: CONTINUE_PROMPT.md  IMPLEMENTATION_PLAN.md  KEYWORDS.json  KEYWORD_CHUNKS.md  PROGRESS  PROMPTS.md  pyproject.toml
combat/examples/: basic_combat.py
combat/oracle_tests/: generated_tests.json
combat/src/: __init__.py  dice.py  effects.py  entity.py  fight.py  hero.py  item.py  spell.py  tactic.py  triggers.py
combat/tests/: test_basic_eff.py  test_cleanse.py  test_complex_eff.py  test_item.py  test_keyword.py  test_sanity.py  test_spell.py  test_status_effects.py  test_strange_scenarios.py  test_tactic.py  test_trait_system.py  test_triggers.py
combat/tools/: keyword_fuzzer.py  triage.py  verify_oracle.py
decompiled/: Main.java
desktop/: MactopLauncher.java
docs/: WORKFLOW.md  post-triage.md  sylvanshine_integration.md  triage.md
screens/: Screen.java
statics/: ImageUtils.java
test/: TestBasicEff.java  TestBook.java  TestBugRepro.java  TestBugReproIgnored.java  TestCleanse.java  TestCollision.java  TestFiles.java  TestItem.java  TestModdingData.java  TestMusic.java  TestParty.java  TestPipe.java  TestScattershot.java  TestStates.java  TestUniqueness.java  TestValidation.java
util/: Animation.java  BasicKeyCatch.java  ChanceHaver.java  Chrono.java  Colours.java  DebugUtilsUseful.java  Discord.java  Draw.java  FlameActor.java  FontWrapper.java  KeyListen.java  LightningActor.java  LineActor.java  LinePathActor.java  LockOverlay.java  Maths.java  NDimension.java  Noise.java  PixelParticle.java  TannLog.java  (+12 more)
(+1044 files in other folders)
