[project]
name = "slicendice-combat"
version = "0.1.0"
description = "Combat system reimplementation for Slice & Dice"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
